--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="context-hero"><img src="images/slogan.png" alt="Seednet">
-                                <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h2>
+                                <h2>Pack time, passion & money in your backpack to go We are your wheel [will]</h2>
                             </div>
                         </div>
                     </div>
@@ -45,14 +45,9 @@
                         <div class="col-lg-6">
                             <div class="context-overview">
                                 <h3>Our mission</h3>
-                                <h2 class="heading mb-3">We ignite opportunity by setting the world in motion.</h2>
-                                <p>Good things happen when people can move, whether across town or towards their
-                                    dreams. Opportunities
-                                    appear, open up, become reality. What started as a way to tap a button to get a
-                                    ride has led to
-                                    billions of moments of human connection as people go all kinds of places in all
-                                    kinds of ways with
-                                    the help of our technology.</p>
+                                <h2 class="heading mb-3">Translate students' time and passion into valuable assets</h2>
+                                <p>Students' time is the most beautiful period of one’s life. It packs in it multi thousands of opportunity to experiment from play, learn, drive, thrive or shine. It is you, students, who decide your time free or to turn it into values.</p>
+                                <p>At SeedNET, we make every moment of your times a choice that you just need to decide.</p>
                             </div>
                         </div>
                         <div class="col-lg-6"><img class="img-overview" src="images/img_overview.png" alt="Seednet"></div>
@@ -77,19 +72,19 @@
                         <div class="col-lg-4 col-md-4"><a class="item-product" href="#!">
                                 <div class="img-product" style="background-image:url(images/img_netvieclam.png)"></div>
                                 <h2>Netvieclam</h2>
-                                <p>What started as a simple idea has become a global logistics layer</p>
+                                <p>Your free time is not free. Let's make someone pay. They pay you the hours. They pay your experience. They pay you the opportunity.</p>
                                 <p class="is-link">Learn more ›</p>
                             </a></div>
                         <div class="col-lg-4 col-md-4"><a class="item-product" href="#!">
                                 <div class="img-product" style="background-image:url(images/img_youhub.png)"></div>
                                 <h2>YouHub</h2>
-                                <p>What started as a simple idea has become a global logistics layer</p>
+                                <p>Let’s connect with the community you belong. Let the world gets to know you. Your free time is not free. People pay to connect you, at times.</p>
                                 <p class="is-link">Learn more ›</p>
                             </a></div>
                         <div class="col-lg-4 col-md-4"><a class="item-product" href="#!">
                                 <div class="img-product" style="background-image:url(images/img_6emo.png)"></div>
                                 <h2>6emo</h2>
-                                <p>What started as a simple idea has become a global logistics layer</p>
+                                <p>Let’s speak out and speak up. There is no reason to be shy. Your free time is not free. People are willing to pay to hear you.</p>
                                 <p class="is-link">Learn more ›</p>
                             </a></div>
                     </div>
