🤟 update content by Kinh-Luan

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="context-hero"><img src="images/slogan.png" alt="Seednet">
-                                <h2>Pack time, passion & money in your backpack to go We are your wheel [will]</h2>
+                                <h2>Pack time, passion & money in your backpack to go</h2>
+                                <h2>We are your wheel [will]</h2>
                             </div>
                         </div>
                     </div>
@@ -46,8 +47,11 @@
                             <div class="context-overview">
                                 <h3>Our mission</h3>
                                 <h2 class="heading mb-3">Translate students' time and passion into valuable assets</h2>
-                                <p>Students' time is the most beautiful period of one’s life. It packs in it multi thousands of opportunity to experiment from play, learn, drive, thrive or shine. It is you, students, who decide your time free or to turn it into values.</p>
-                                <p>At SeedNET, we make every moment of your times a choice that you just need to decide.</p>
+                                <p>Students' time is the most beautiful period of one’s life. It packs in it multi
+                                    thousands of opportunity to experiment from play, learn, drive, thrive or shine. It
+                                    is you, students, who decide your time free or to turn it into values.</p>
+                                <p>At SeedNET, we make every moment of your times a choice that you just need to
+                                    decide.</p>
                             </div>
                         </div>
                         <div class="col-lg-6"><img class="img-overview" src="images/img_overview.png" alt="Seednet"></div>
@@ -69,24 +73,33 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-4 col-md-4"><a class="item-product" href="#!">
+                        <div class="col-lg-4 col-md-4">
+                            <a class="item-product" href="https://netvieclam.vn" target="_blank">
                                 <div class="img-product" style="background-image:url(images/img_netvieclam.png)"></div>
-                                <h2>Netvieclam</h2>
-                                <p>Your free time is not free. Let's make someone pay. They pay you the hours. They pay your experience. They pay you the opportunity.</p>
+                                <h2>netvieclam</h2>
+                                <p>Your free time is not free. Let's make someone pay. They pay you the hours. They pay
+                                    your experience. They pay you the opportunity.</p>
                                 <p class="is-link">Learn more ›</p>
-                            </a></div>
-                        <div class="col-lg-4 col-md-4"><a class="item-product" href="#!">
+                            </a>
+                        </div>
+                        <div class="col-lg-4 col-md-4">
+                            <a class="item-product" href="https://youhub.vn" target="_blank">
                                 <div class="img-product" style="background-image:url(images/img_youhub.png)"></div>
-                                <h2>YouHub</h2>
-                                <p>Let’s connect with the community you belong. Let the world gets to know you. Your free time is not free. People pay to connect you, at times.</p>
+                                <h2>YouHUB</h2>
+                                <p>Let’s connect with the community you belong. Let the world gets to know you. Your
+                                    free time is not free. People pay to connect you, at times.</p>
                                 <p class="is-link">Learn more ›</p>
-                            </a></div>
-                        <div class="col-lg-4 col-md-4"><a class="item-product" href="#!">
+                            </a>
+                        </div>
+                        <div class="col-lg-4 col-md-4">
+                            <a class="item-product" href="#!">
                                 <div class="img-product" style="background-image:url(images/img_6emo.png)"></div>
                                 <h2>6emo</h2>
-                                <p>Let’s speak out and speak up. There is no reason to be shy. Your free time is not free. People are willing to pay to hear you.</p>
+                                <p>Let’s speak out and speak up. There is no reason to be shy. Your free time is not
+                                    free. People are willing to pay to hear you.</p>
                                 <p class="is-link">Learn more ›</p>
-                            </a></div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
