--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="icon" type="image/ico" href="images/favicon.ico">
     <link href="css/layout.css" rel="stylesheet" type="text/css">
     <style></style>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-PFVR7M9');</script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body>
@@ -117,6 +120,9 @@
     <!-- Include Plugin-->
     <script src="js/jquery.min.js"></script>
     <script></script>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PFVR7M9" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 </body>
 
 </html>
