--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="revisit-after" content="7 days">
     <meta property="og:url" content="">
     <meta property="og:title" content="">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="images/share_fb.png">
     <link rel="icon" type="image/ico" href="images/favicon.ico">
     <link href="css/layout.css" rel="stylesheet" type="text/css">
     <style></style>
