😘 update meta share

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <meta name="description" content="SeedNET">
     <meta name="format-detection" content="telephone=no">
     <meta name="author" content="Lam Nguyen">
-    <meta name="copyright" content="2019 Lam Nguyen">
+    <meta name="copyright" content="2019 SeedNET">
     <meta name="robots" content="index, follow">
     <meta name="revisit-after" content="7 days">
-    <meta property="og:url" content="">
-    <meta property="og:title" content="">
+    <meta property="og:url" content="https://seednet.vn/">
+    <meta property="og:title" content="SeedNET - Students, your time is not free!">
+    <meta property="og:description" content="Pack time, passion & money in your backpack to go. We are your wheel [will].">
     <meta property="og:image" content="images/share_fb.png">
     <link rel="icon" type="image/ico" href="images/favicon.ico">
     <link href="css/layout.css" rel="stylesheet" type="text/css">
