update policy page

--- a/policy.html
+++ b/policy.html
@@ -164,7 +164,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <p class="text-center">© 2019 Seednet</p>
+                        <p class="text-center">&copy; 2019 SeedNET - 🏗️ with ❤️ in Vietnam</p>
                     </div>
                 </div>
             </div>
