--- a/404.html
+++ b/404.html
@@ -1,1 +1,100 @@
-404
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Privacy Policy - SeedNET</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <meta name="description" content="description here">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="author" content="Lam Nguyen">
+    <meta name="copyright" content="2019 SeedNET">
+    <meta name="robots" content="index, follow">
+    <meta name="revisit-after" content="7 days">
+    <meta property="og:url" content="https://seednet.vn/">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="SeedNET - 🏗️ with ❤️ in Vietnam">
+    <meta property="og:description" content="404 page not found">
+    <meta property="og:image" content="images/share_fb.png">
+    <meta property="fb:app_id" content="394190971395543">
+    <link rel="icon" type="image/ico" href="../images/favicon.ico">
+    <style>
+        /* Styles of the 404 page of my website. */
+
+        body {
+            background: #081421;
+            color: #d3d7de;
+            font-family: "Courier new";
+            font-size: 18px;
+            line-height: 1.5em;
+            cursor: default;
+        }
+
+        a {
+            color: #fff;
+        }
+
+        .code-area {
+            position: absolute;
+            width: 320px;
+            min-width: 320px;
+            top: 50%;
+            left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+        }
+
+        .code-area>span {
+            display: block;
+        }
+
+        @media screen and (max-width: 320px) {
+            .code-area {
+                font-size: 5vw;
+                min-width: auto;
+                width: 95%;
+                margin: auto;
+                padding: 5px;
+                padding-left: 10px;
+                line-height: 6.5vw;
+            }
+        }
+    </style>
+</head>
+
+<body>
+    <div class="code-area">
+        <span style="color: #777;font-style:italic;">
+            // 404 page not found.
+        </span>
+        <span style="color: #999;font-style:italic;">
+            // Oh no!! Are you lost? Let's drink beer now, guys! 🍺
+        </span>
+        <span>
+            <span style="color:#d65562;">
+                if
+            </span>
+            (<span style="color:#4ca8ef;">!</span><span style="font-style: italic;color:#bdbdbd;">found</span>)
+            {
+        </span>
+        <span>
+            <span style="padding-left: 15px;color:#2796ec">
+                <i style="width: 10px;display:inline-block"></i>throw
+            </span>
+            <span>
+                (<span style="color: #a6a61f">"(╯°□°)╯︵ ┻━┻"</span>);
+            </span>
+            <span style="display:block">}</span>
+            <span style="color: #777;font-style:italic;">
+                // <a href="index.html">Go home!</a>
+            </span>
+        </span>
+    </div>
+    <script>
+        console.log("Oh no!!");
+        console.log("Are you lost? Let's drink beer now, guys! 🍺");
+    </script>
+</body>
+
+</html>
