--- a/vn/policy.html
+++ b/vn/policy.html
@@ -15,9 +15,8 @@
     <meta property="og:url" content="https://seednet.vn/">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Privacy Policy - SeedNET">
-    <meta property="og:description"
-        content="SeedNET provides user several apps, including but not limit to NETVIECLAM, 6EMO, YOUHUB and SEEDNET TRIVIA...">
-    <meta property="og:image" content="images/share_fb.png">
+    <meta property="og:description" content="SeedNET provides user several apps, including but not limit to NETVIECLAM, 6EMO, YOUHUB and SEEDNET TRIVIA...">
+    <meta property="og:image" content="../images/share_fb.png">
     <meta property="fb:app_id" content="394190971395543">
     <link rel="icon" type="image/ico" href="../images/favicon.ico">
     <link href="../css/layout.css" rel="stylesheet" type="text/css">
