--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="SeedNET - 🏗️ with ❤️ in Vietnam">
     <meta property="og:description" content="404 page not found">
-    <meta property="og:image" content="images/share_fb.png">
+    <meta property="og:image" content="../images/img_404.jpg">
     <meta property="fb:app_id" content="394190971395543">
     <link rel="icon" type="image/ico" href="../images/favicon.ico">
     <style>
