--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="revisit-after" content="7 days">
     <meta property="og:url" content="https://seednet.vn/">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="SeedNET - Students, your time is not free!">
+    <meta property="og:title" content="SeedNET - Students, Your free time is not free!">
     <meta property="og:description" content="Pack time, passion & money in your backpack to go. We are your wheel [will].">
     <meta property="og:image" content="images/share_fb.png">
     <meta property="fb:app_id" content="394190971395543">
