--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="SeedNET - Students, Your free time is not free!">
     <meta property="og:description" content="Pack time, passion & money in your backpack to go. We are your wheel [will].">
-    <meta property="og:image" content="images/share_fb.png">
+    <meta property="og:image" content="images/share_fb.png?v=20190507r1">
     <meta property="fb:app_id" content="394190971395543">
     <link rel="icon" type="image/ico" href="images/favicon.ico">
     <link href="css/layout.css" rel="stylesheet" type="text/css">
@@ -37,7 +37,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <div class="context-hero"><img src="images/slogan.png" alt="Seednet">
+                            <div class="context-hero"><img src="images/slogan.png?v=20190507r1" alt="Seednet">
                                 <h2>Pack time, passion & money in your backpack to go</h2>
                                 <h2>We are your wheel [will]</h2>
                             </div>
